--- a/zayeed-portfolio/package.json
+++ b/zayeed-portfolio/package.json
@@ -1,3 +1,15 @@
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
+"devDependencies": {
+  "vite": "^4.3.9",
+  "@vitejs/plugin-react": "^4.0.0",
+  "tailwindcss": "^3.3.2",
+  "postcss": "^8.4.21",
+  "autoprefixer": "^10.4.14"
+}
 {
   "name": "zayeed-portfolio",
   "version": "1.0.0",
